Add a small GPL header.

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,3 +1,7 @@
+#
+# This file is distributed under the GNU General Public License. See
+# COPYING for details.
+#
 # General configuration settings
 
 EXEC = irony-server
