Add 2 submodules: posn-on-screen and popup-frame (in order to start a completion frame).

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "utils/SimpleJSON"]
 	path = utils/SimpleJSON
 	url = git://github.com/MJPA/SimpleJSON.git
+[submodule "elisp/plugins/popup-frame"]
+	path = elisp/plugins/popup-frame
+	url = git://github.com/Sarcasm/popup-frame.git
+[submodule "elisp/plugins/posn-on-screen"]
+	path = elisp/plugins/posn-on-screen
+	url = git://github.com/Sarcasm/posn-on-screen.git
