do not build the 'master' branch in travis-ci [ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,8 @@ script:
 
 after_script:
   - cd ..
-  - rm -rf build
+
+# ATM the master branch doesn't build and it doesn't matter
+branches:
+  except:
+    - master
