Configure unit testing for elisp code. Will run in travis. - tests use ERT - tests are compabible with ctest so future test of C++ code should be   able to take part of the test suite seamlessly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,3 +66,5 @@ set (IRONY_UTILS_INCLUDES
 # add_dependencies (executable lib)
 add_subdirectory (lib)
 add_subdirectory (server)
+enable_testing ()
+add_subdirectory (test)
