Suggest to configure the project when a file has errors & various fixes.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -30,6 +30,8 @@ add_executable (irony-server
   plugins/SyntaxChecker.h
   plugins/CacheInvalidation.h
   plugins/CacheInvalidation.cpp
+  plugins/CompileChecker.cpp
+  plugins/CompileChecker.h
   )
 
 add_dependencies (irony-server
