Freshen up irony-server code
- Add .clang_format
- Coding conventions updated
- Simplify Doxygen file headers
- Doxygen generation
- Remove unnecessary differentiation between header files with
  templates (used to end with .hpp) and without (.h)
- ...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,5 +70,6 @@ set (IRONY_UTILS_INCLUDES
 # add_dependencies (executable lib)
 add_subdirectory (lib)
 add_subdirectory (server)
+add_subdirectory (docs)
 enable_testing ()
 add_subdirectory (test)
