FindLibClang.cmake: Follow CMake conventions more thoroughly
A quick reading of /usr/share/cmake/Modules/readme.txt made me realize
some things weren't done in a proper way, now find_package(LibClang)
should behave more consistently with other find_package() commands.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 find_package (LibClang REQUIRED)
 
-include_directories (${LibClang_INCLUDE_DIRS})
+include_directories (${LIBCLANG_INCLUDE_DIRS})
 include_directories (${IRONY_UTILS_INCLUDES})
 include_directories (${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -40,7 +40,7 @@ add_dependencies (irony-server
 
 target_link_libraries (irony-server
   irony-utils
-  ${LibClang_LIBRARIES}
+  ${LIBCLANG_LIBRARIES}
   )
 
 install (TARGETS irony-server
