separate oneshot/non lisp commands from "interactive" Commands

--- a/server/src/CMakeLists.txt
+++ b/server/src/CMakeLists.txt
@@ -10,7 +10,7 @@ add_executable(irony-server
   ClangString.cpp
   ClangString.h
   Command.cpp
-  Command.def
+  Commands.def
   Command.h
   Irony.cpp
   Irony.h
