--- a/server/docs/CMakeLists.txt
+++ b/server/docs/CMakeLists.txt
@@ -1,11 +1,13 @@
-find_package (Doxygen)
+if (BUILD_DOXYGEN)
+  find_package (Doxygen REQUIRED)
 
-if (DOXYGEN_FOUND)
   set (HAS_DOT_VALUE "NO")
   if (DOXYGEN_DOT_FOUND)
     set (HAS_DOT_VALUE "YES")
   endif()
+
   configure_file(irony-server.cfg.in irony-server.cfg @ONLY)
+
   add_custom_target(doxygen
     ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/irony-server.cfg
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
