add initial compile check, implement interactive/-i option

--- a/server/src/CMakeLists.txt
+++ b/server/src/CMakeLists.txt
@@ -6,8 +6,10 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_executable(irony-server
   support/arraysize.h
   support/NonCopyable.h
-  support/TemporaryFile.h
   support/TemporaryFile.cpp
+  support/TemporaryFile.h
+  support/CommandLineParser.cpp
+  support/CommandLineParser.h
 
   ClangString.cpp
   ClangString.h
