restore some tests, quick hack to re-enable cdb to load

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -33,4 +33,4 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 add_subdirectory(src)
 add_subdirectory(docs)
 enable_testing()
-# add_subdirectory(test)
+add_subdirectory(test)
