irony-completion: simplify Irony::complete format and code

--- a/server/src/CMakeLists.txt
+++ b/server/src/CMakeLists.txt
@@ -5,14 +5,13 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 add_executable(irony-server
   support/arraysize.h
+  support/CommandLineParser.cpp
+  support/CommandLineParser.h
+  support/iomanip_quoted.h
   support/NonCopyable.h
   support/TemporaryFile.cpp
   support/TemporaryFile.h
-  support/CommandLineParser.cpp
-  support/CommandLineParser.h
 
-  ClangString.cpp
-  ClangString.h
   Command.cpp
   Commands.def
   Command.h
