let CMake find the Clang builtin headers directory

--- a/server/src/CMakeLists.txt
+++ b/server/src/CMakeLists.txt
@@ -1,7 +1,16 @@
+include(CheckLibClangBuiltinHeadersDir)
+
 find_package(LibClang REQUIRED)
 
 include_directories(${LIBCLANG_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
+check_libclang_builtin_headers_dir()
+
+if (LIBCLANG_BUILTIN_HEADERS_DIR)
+  # look for CLANG_BUILTIN_HEADERS_DIR usage in the code for an explanation
+  add_definitions("-DCLANG_BUILTIN_HEADERS_DIR=\"${LIBCLANG_BUILTIN_HEADERS_DIR}\"")
+endif()
 
 add_executable(irony-server
   support/arraysize.h
