Fix the CMake files to work on Windows
LibClangDiagnosticsChecker.c, was using C instead of C++. On Windows it
means we were compiling it in C89 mode or so, a mode where declaring
variables was not possible in for-loops, ...Just use C++ instead, it
should be less fragile.

This changes only take into consideration a native build, it hasn't been
tested on an emulation layer such as mingw.

We make the assumption that:
- a Windows compiler is used
- the package that provides libclang is the one from http://llvm.org/releases/
- libclang.dll is available in the PATH (or at least in emacs's
  exec-path).

Also remove unnecessary HINTS variables LIBCLANG_INCLUDE_PATH and
LIBCLANG_LIBRARY_PATH, the user can just use LIBCLANG_INCLUDE_DIR and
LIBCLANG_LIBRARY.

--- a/server/test/elisp/CMakeLists.txt
+++ b/server/test/elisp/CMakeLists.txt
@@ -1,7 +1,21 @@
-find_program(EMACS_EXECUTABLE emacs)
+# On MS-Windows, emacs_dir is a special environment variable, which
+# indicates the full path of the directory in which Emacs is
+# installed.
+#
+# There is no standard location that I know of for Emacs on Windows so
+# using this special environment variable will at least help people
+# who build the server from inside Emacs.
+if(DEFINED ENV{emacs_dir})
+  list(APPEND EMACS_EXECUTABLE_HINTS $ENV{emacs_dir}/bin)
+endif()
 
-if (NOT EMACS_EXECUTABLE)
-  message(WARNING "emacs executable not found, elisp tests will not be run")
+find_program(EMACS_EXECUTABLE emacs
+  HINTS ${EMACS_EXECUTABLE_HINTS})
+
+if (EMACS_EXECUTABLE)
+  message(STATUS "Found emacs: ${EMACS_EXECUTABLE}")
+else()
+  message(WARNING "emacs not found: elisp tests will be skipped!")
   return()
 endif()
 
