Return libclang AST in emacs-lisp-readable form.

--- a/server/src/CMakeLists.txt
+++ b/server/src/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(irony-server
   support/NonCopyable.h
   support/TemporaryFile.cpp
   support/TemporaryFile.h
+  support/Sexp.cpp
 
   Command.cpp
   Commands.def
