CMake: better use of CTest for testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_script:
 script:
   - cmake -DEMACS_EXECUTABLE=$(which $EMACS) ../server
   - make -k
-  - ctest --output-on-failure 
+  - make check
 
 after_script:
   - cd -
