Switched name from Database to CompilationDatabase.

--- a/server/src/CMakeLists.txt
+++ b/server/src/CMakeLists.txt
@@ -32,8 +32,8 @@ add_executable(irony-server
   Irony.h
   TUManager.cpp
   TUManager.h
-  Database.h
-  Database.cpp
+  CompilationDatabase.h
+  CompilationDatabase.cpp
 
   main.cpp)
 
