Added command for getting all file names in database.

--- a/server/src/CMakeLists.txt
+++ b/server/src/CMakeLists.txt
@@ -2,6 +2,9 @@ include(CheckLibClangBuiltinHeadersDir)
 
 find_package(LibClang REQUIRED)
 
+find_library(BOOST_SYSTEM boost_system)
+find_library(BOOST_FILESYSTEM boost_filesystem)
+
 include_directories(${LIBCLANG_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -65,6 +68,6 @@ set_source_files_properties(main.cpp
   PROPERTIES
   COMPILE_DEFINITIONS IRONY_PACKAGE_VERSION=\"${IRONY_PACKAGE_VERSION}\")
 
-target_link_libraries(irony-server ${LIBCLANG_LIBRARIES})
+target_link_libraries(irony-server ${LIBCLANG_LIBRARIES} ${BOOST_FILESYSTEM} ${BOOST_SYSTEM})
 
 install(TARGETS irony-server DESTINATION bin)
