--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ script:
   - mkdir build
   - cd build
   - $EMACS --version
-  - cmake -DEMACS_EXECUTABLE=$(which $EMACS) ../server
+  - cmake -DEMACS_EXECUTABLE=$(which $EMACS) -DIRONY_WARNINGS_AS_ERRORS=ON ../server
   - make -k
   - make check
