--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
       - emacs
       - emacs-snapshot
       - clang-tidy-4.0
+      - realpath
 
 compiler:
   - gcc
@@ -49,7 +50,7 @@ matrix:
           -clang-tidy-binary clang-tidy-4.0 \
           -clang-apply-replacements-binary clang-apply-replacements-4.0 \
           -p . \
-          -header-filter '.*' \
+          -header-filter $(realpath ../server) \
           -warnings-as-errors='*'
 
 script:
