--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ matrix:
         - make -k
         - make check
         - |
-          ../server/run-clang-tidy.py \
+          ../server/build-aux/run-clang-tidy/run-clang-tidy.py \
           -clang-tidy-binary clang-tidy-4.0 \
           -clang-apply-replacements-binary clang-apply-replacements-4.0 \
           -p . \
