irony-cdb-json/irony-server: Caches last used compilation database
A compilation database can be very large and take a long time to read
and parse, which happens quite frequently (when opening a file for
instance).

This caches the last read/parsed compilation database based on its
filename and last modification time.

--- a/server/src/CMakeLists.txt
+++ b/server/src/CMakeLists.txt
@@ -27,6 +27,8 @@ add_executable(irony-server
   Command.cpp
   Commands.def
   Command.h
+  CompDBCache.h
+  CompDBCache.cpp
   Irony.cpp
   Irony.h
   TUManager.cpp
