--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -67,6 +67,9 @@ option(GENERATE_DOXYGEN "Whether or not to build the Doxygen documentation" OFF)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+if (APPLE)
+  set(CMAKE_INSTALL_RPATH_USE_LINK_PATH ON)
+endif()
 
 add_subdirectory(src)
 add_subdirectory(docs)
