CMake: remove unnecessary cruft
These things are sometimes trying to be helpful,
but they clutter the CMakeLists.txt,
while things like -DCMAKE_CXX_FLAGS='...' can be specified by the user when he
needs customization.

Same for in-source builds, we are trying to be helpful,
but it's not actually an issue.
If in-source builds are to forbid, it should be CMake to decide, not us.

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,8 @@ matrix:
         - cd build
         - |
           cmake -DCMAKE_C_COMPILER=clang-4.0 -DCMAKE_CXX_COMPILER=clang++-4.0 \
-          -DIRONY_WARNINGS_AS_ERRORS=ON \
+          -DCMAKE_CXX_FLAGS="-Wall -Wextra -Werror" \
+          -DCMAKE_BUILD_TYPE=Release \
           -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
           ../server
         - make -k
@@ -60,7 +61,8 @@ script:
   - |
     cmake \
     -DEMACS_EXECUTABLE=$(which $EMACS) \
-    -DIRONY_WARNINGS_AS_ERRORS=ON \
+    -DCMAKE_CXX_FLAGS="-Wall -Wextra -Werror" \
+    -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
     ../server
   - make -k
